--- a/src/app/components/directivas/directivas.component.html
+++ b/src/app/components/directivas/directivas.component.html
@@ -18,14 +18,53 @@
 
                 <div class="col-md-6">
                     <h3>ngStyle</h3>
-                    <input type="number" (input)="anchuraAltura = $event.target.value" value="100" /> Cambiar tamaño
+                    Cambiar tamaño: <input type="number" (input)="anchuraAltura = $event.target.value" value="100" />
                     <br><br>
 
-                    <div class="cuadrado" [ngStyle]="{ 'background-color': colorCheck ? 'blue' : 'red', 'width': anchuraAltura + 'px', 
+                    <div class="cuadrado" [ngStyle]="{ 'background-color': colorCheck ? 'gray' : 'green', 'width': anchuraAltura + 'px', 
               'height': anchuraAltura + 'px' }"></div>
                 </div>
 
+            </div><br>
+            <div class="row">
+                <div class="col-md-6">
+                    <h3>ngModel</h3>
+                    <p>Escribe algo:</p> <input type="text" [(ngModel)]="texto" /><br><br>
+                    <span><strong>El valor de la variable es: </strong>{{ texto }}</span><br><br>
+                    <div class="row">
+                        <div class="col-md-2">
+                            <button class="btn btn-primary" (click)="hacerMayusculas()">MAYÚS</button>
+                        </div>
+                        <div class="col-md-2">
+
+                            <button class="btn btn-primary" (click)="hacerMinusculas()">minús</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <h3>ngSwitch</h3>
+                    Seleccione una opción
+                    <select (change)="opcion = $event.target.value">
+                        <option>--Seleccione una opción--</option>
+                        <option value="ASP.NET">ASP.NET</option>
+                        <option value="Angular">Angular</option>
+                    </select><br><br>
+
+                    <div [ngSwitch]="opcion">
+                        <div *ngSwitchDefault>Debe escoger una opción</div>
+                        <div *ngSwitchCase="'ASP.NET'">
+                            Usted ha escogido ASP.NET
+                        </div>
+                        <div *ngSwitchCase="'Angular'">
+                            Usted ha escogido Angular
+                        </div>
+                    </div><br>
+
+                    <h3>ngIf</h3>
+                    <div *ngIf="dataCargada">
+                        La data ha cargado
+                    </div><br>
+                </div>
             </div>
         </div>
     </div>
-</div>
