add functionality viewchild

--- a/src/app/components/eventos/eventos.component.html
+++ b/src/app/components/eventos/eventos.component.html
@@ -7,7 +7,7 @@
 
                 <div class="col-md-6">
                     <h4>Binding de Eventos</h4>
-                    <button class="btn btn-info" (click)='incrementar()'>Incrementar contador</button>
+                    <button class="btn btn-primary" (click)='incrementar()'>Incrementar contador</button>
                     <p class="mt-4">Contador: {{cantidad}}</p>
                 </div>
                 <div class="col-md-6">
