--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -24,6 +24,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" routerLink="/padre-a-hijo">Padre a hijo</a>
                     <a class="dropdown-item" routerLink="/hijo-a-padre">Hijo a padre</a>
+                    <a class="dropdown-item" routerLink="/padre-view-child">ViewChild</a>
                 </div>
             </li>
             <li class="nav-item">
