add components for forms

--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -27,6 +27,15 @@
                     <a class="dropdown-item" routerLink="/padre-view-child">ViewChild</a>
                 </div>
             </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Formularios
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" routerLink="/template-form">Por plantilla</a>
+                    <a class="dropdown-item" routerLink="/reactive-form">Reactivo</a>
+                </div>
+            </li>
             <li class="nav-item">
                 <a class="nav-link" routerLink="/servicios" [routerLinkActive]="'active'">Servicios</a>
             </li>
