--- a/src/app/components/servicios/servicios.component.html
+++ b/src/app/components/servicios/servicios.component.html
@@ -1,1 +1,72 @@
-<p>servicios works!</p>
+<div class="mt-4">
+    <h2>{{title}}</h2>
+    <hr>
+    <div class="row">
+        <div class="col-md-12 py-4">
+            <div class="row">
+                <div class="col-md-6">
+                    <p>Ingrese el ID del usuario a consultar:</p>
+                    <input type="text" #textId>
+                    <div *ngIf="notFound">
+                        *Usuario no encontrado
+                    </div>
+                    <br><br>
+                    <button class="btn btn-primary" (click)="getUser(textId.value)">Buscar</button>
+                </div>
+
+
+                <div class="col-md-6 mt-4">
+                    <div *ngIf="user">
+                        <div>
+                            <strong>ID:</strong> {{ user.id }}
+                        </div>
+
+                        <div>
+                            <strong>Nombre:</strong> {{ user.name | uppercase }}
+                        </div>
+
+                        <div>
+                            <strong>Username:</strong> {{ user.username }}
+                        </div>
+
+                        <div>
+                            <strong>Correo:</strong> {{ user.email }}
+                        </div>
+
+                        <div>
+                            <strong>Sitio web:</strong> {{ user.website }}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="row">
+        <div class="col-md-12 py-4">
+            <div *ngIf=users>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Nombre</th>
+                            <th>Usuario</th>
+                            <th>Correo</th>
+                            <th>Sitio web</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let usuario of users">
+                            <td>{{ usuario.id }}</td>
+                            <td>{{ usuario.name }}</td>
+                            <td>{{ usuario.username }}</td>
+                            <td>{{ usuario.email }}</td>
+                            <td>{{ usuario.website }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
