add functionality template-form

--- a/src/app/components/comunicacion/hijo-a-padre/segundo-hijo/segundo-hijo.component.html
+++ b/src/app/components/comunicacion/hijo-a-padre/segundo-hijo/segundo-hijo.component.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-md-12 py-2">
             <input type="text" (input)="textoHijo = $event.target.value"><br><br>
-            <button class="btn btn-primary" (click)="botonClick()">Enviar</button>&nbsp;
+            <button class="btn btn-primary mr-2" (click)="botonClick()">Enviar</button>
             <button class="btn btn-primary" (click)="botonClickMayusculas()">Enviar Mayúsculas</button>
         </div>
     </div>
