--- a/src/app/components/formularios/reactive-form/reactive-form.component.html
+++ b/src/app/components/formularios/reactive-form/reactive-form.component.html
@@ -1,1 +1,10 @@
-<p>reactive-form works!</p>
+<div class="mt-4">
+    <h2>{{title}}</h2>
+    <hr>
+    <div class="row">
+        <div class="col-md-12 py-4">
+            <div class="row">
+            </div>
+        </div>
+    </div>
+</div>
