--- a/src/app/components/formularios/template-form/template-form.component.html
+++ b/src/app/components/formularios/template-form/template-form.component.html
@@ -1,1 +1,40 @@
-<p>template-form works!</p>
+<div class="mt-4">
+    <h2>{{title}}</h2>
+    <hr>
+    <div class="row">
+        <div class="col-md-12 py-4">
+            <div class="row">
+                <div class="col-md-6">
+                    <form (submit)="submit()" #formularioRegistro="ngForm">
+                        <div class="form-group">
+                            <label for="username">Usuario</label>
+                            <input type="text" autocomplete="off" class="form-control" id="username" name="username" required [(ngModel)]="model.username" #username="ngModel" [ngModelOptions]="{updateOn: 'blur'}">
+
+                            <div *ngIf="username.invalid && (username.dirty || username.touched)" class="alert alert-danger">
+                                <div *ngIf="username.errors.required">
+                                    Nombre de usuario es requerido.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Contraseña</label>
+                            <input type="password" class="form-control" id="password" name="password" [(ngModel)]="model.password" required minlength="4" #password="ngModel">
+
+                            <div *ngIf="password.invalid && (password.dirty || password.touched)" class="alert alert-danger">
+                                <div *ngIf="password.errors.required">
+                                    Contraseña es requerido
+                                </div>
+                                <div *ngIf="password.errors.minlength">
+                                    La longitud mínima de la contraseña debe de ser de 4 carácteres.
+                                </div>
+                            </div>
+                        </div>
+
+                        <button type="submit" class="btn btn-success mr-2" [disabled]="!formularioRegistro.form.valid">Enviar</button>
+                        <button type="button" class="btn btn-info" (click)="refrescar()">Refrescar</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
