--- a/src/app/components/formularios/reactive-form/reactive-form.component.html
+++ b/src/app/components/formularios/reactive-form/reactive-form.component.html
@@ -4,6 +4,40 @@
     <div class="row">
         <div class="col-md-12 py-4">
             <div class="row">
+                <div class="col-md-6">
+
+                    <form (submit)="submit()" [formGroup]="registerForm">
+                        <div class="form-group">
+                            <label for="username">Usuario</label>
+                            <input type="text" class="form-control" formControlName="username">
+                            <div *ngIf="username.invalid && (username.dirty || username.touched)" class="alert alert-danger">
+                                <div *ngIf="username.errors.required">
+                                    El nombre de usuario es requerido.
+                                </div>
+
+                            </div>
+
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Contraseña</label>
+                            <input type="password" class="form-control" formControlName="password">
+
+                            <div *ngIf="password.invalid && (password.dirty || password.touched)" class="alert alert-danger">
+                                <div *ngIf="password.errors.required">
+                                    La contraseña es requerida.
+                                </div>
+                                <div *ngIf="password.errors.minlength">
+                                    La longitud mínima de la contraseña debe de ser de 4 carácteres.
+                                </div>
+                                <div *ngIf="password.errors.passwordValidation">
+                                    {{password.errors.passwordValidation.message}}
+                                </div>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-success mr-2" [disabled]="registerForm.invalid">Enviar</button>
+                        <button type="button" class="btn btn-info" (click)="refrescar()">Refrescar</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
