--- a/src/app/components/formularios/template-form/template-form.component.html
+++ b/src/app/components/formularios/template-form/template-form.component.html
@@ -8,11 +8,11 @@
                     <form (submit)="submit()" #formularioRegistro="ngForm">
                         <div class="form-group">
                             <label for="username">Usuario</label>
-                            <input type="text" autocomplete="off" class="form-control" id="username" name="username" required [(ngModel)]="model.username" #username="ngModel" [ngModelOptions]="{updateOn: 'blur'}">
+                            <input type="text" autocomplete="off" class="form-control" id="username" name="username" required [(ngModel)]="model.username" #username="ngModel">
 
                             <div *ngIf="username.invalid && (username.dirty || username.touched)" class="alert alert-danger">
                                 <div *ngIf="username.errors.required">
-                                    Nombre de usuario es requerido.
+                                    El nombre de usuario es requerido.
                                 </div>
                             </div>
                         </div>
@@ -22,7 +22,7 @@
 
                             <div *ngIf="password.invalid && (password.dirty || password.touched)" class="alert alert-danger">
                                 <div *ngIf="password.errors.required">
-                                    Contraseña es requerido
+                                    La contraseña es requerida.
                                 </div>
                                 <div *ngIf="password.errors.minlength">
                                     La longitud mínima de la contraseña debe de ser de 4 carácteres.
