--- a/src/app/components/eventos/eventos.component.html
+++ b/src/app/components/eventos/eventos.component.html
@@ -12,8 +12,8 @@
                 </div>
                 <div class="col-md-6">
                     <p>
-                        <label>Ingrese texto: </label><br>
-                        <input type="text" (input)='onTextboxInput($event)'><br>
+                        <label>Ingrese texto: </label><br />
+                        <input type="text" (input)='onTextboxInput($event)'><br />
                     </p>
                     <p class="mt-4">
                         Texto ingresado: {{texto}}
@@ -23,12 +23,12 @@
 
             <div class="row">
                 <div class="col-md-6">
-                    <h4>Binding de Propiedad</h4><br> Seleccione una imagen:
+                    <h4>Binding de Propiedad</h4><br /> Seleccione una imagen:
                     <select id="selectImagen" (change)="imagenURL= $event.target.value">
                         <option value="https://www-asp.azureedge.net/v-2018-11-02-001/images/ui/asplogo-square.png">ASP.NET</option>
                         <option value="https://angular.io/assets/images/logos/angularjs/AngularJS-Shield.svg">Angular</option>
                      </select>
-                    <br />
+                    <br /><br />
                     <img [src]="imagenURL" />
                 </div>
             </div>
