--- a/src/app/components/comunicacion/hijo-a-padre/segundo-hijo/segundo-hijo.component.html
+++ b/src/app/components/comunicacion/hijo-a-padre/segundo-hijo/segundo-hijo.component.html
@@ -2,7 +2,7 @@
     <h4>{{title}}</h4>
     <div class="row">
         <div class="col-md-12 py-2">
-            <input type="text" (input)="textoHijo = $event.target.value"><br><br>
+            <input type="text" (input)="textoHijo = $event.target.value"><br /><br />
             <button class="btn btn-primary mr-2" (click)="botonClick()">Enviar</button>
             <button class="btn btn-primary" (click)="botonClickMayusculas()">Enviar Mayúsculas</button>
         </div>
