add module shared, update data service

--- a/src/app/components/servicios/servicios.component.html
+++ b/src/app/components/servicios/servicios.component.html
@@ -61,7 +61,7 @@
                             <td>{{ usuario.id }}</td>
                             <td>{{ usuario.name }}</td>
                             <td>{{ usuario.username }}</td>
-                            <td>{{ usuario.email }}</td>
+                            <td>{{ usuario.email | minusConvertion }}</td>
                             <td>{{ usuario.website }}</td>
                         </tr>
                     </tbody>
