update directive ngStyle

--- a/src/app/components/directivas/directivas.component.html
+++ b/src/app/components/directivas/directivas.component.html
@@ -21,8 +21,7 @@
                     Cambiar tamaño: <input type="number" (input)="anchuraAltura = $event.target.value" value="100" />
                     <br /><br />
 
-                    <div class="cuadrado" [ngStyle]="{ 'background-color': colorCheck ? 'gray' : 'green', 'width': anchuraAltura + 'px', 
-              'height': anchuraAltura + 'px' }"></div>
+                    <div class="cuadrado" [ngStyle]="{ 'width': anchuraAltura + 'px', 'height': anchuraAltura + 'px' }"></div>
                 </div>
 
             </div><br />
